# llm-carbon-index

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CHANGELOG_de.md  CHANGELOG_zh.md  CLAUDE.md  COMPLETION_REPORT_2026-06-17.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  PLANS.md  README.md  README_de.md  README_zh.md  SECURITY.md  index.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
assets/: index-CQYsF6uS.css  index-DESi62x2.js
data/: closed_model_assumptions.yaml  grid_fallback_factors.yaml  latest.json  model_capability.yaml  model_crosswalk.yaml  provider_region_map.yaml  sensitivity.json  timeseries.json
docs/: ASSUMPTIONS.md  ASSUMPTIONS_de.md  ASSUMPTIONS_zh.md  BOUNDARY.md  BOUNDARY_de.md  BOUNDARY_zh.md  DATA_SCHEMAS.md  DATA_SCHEMAS_de.md  DATA_SCHEMAS_zh.md  ENGINEERING_STANDARDS.md  ENGINEERING_STANDARDS_de.md  ENGINEERING_STANDARDS_zh.md  FAIRNESS.md  FAIRNESS_de.md  FAIRNESS_zh.md  I18N_AUDIT.md  PROJECT_STATUS.md  PROJECT_STATUS_de.md  PROJECT_STATUS_zh.md  VERIFICATION_REALWORLD_2026-06-18.md  absorbed-from-gemini.md  methodology.md  methodology_de.md  methodology_zh.md
pipeline/: README.md  __init__.py  carbon.py  config.py  embodied.py  energy.py  estimate.py  fairness.py  frontier.py  grid.py  ingest.py  manifest.py  openrouter.py  output.py  precision.py  provenance.py  ranges.py  run.py  sensitivity.py  slugs.py  snapshot.py  storage.py  tokens.py  types.py  validate_literature.py  verify.py  water.py
schemas/: esg_export.schema.json  output.schema.json
scratch/: prove_math.py
specs/: DISCOVERIES.md  INDEX.md  PHASE6E_ORCHESTRATION.md  efficiency-frontier.md  phase-1-ingestion.md  phase-2-estimation.md  phase-3-output-json.md  phase-4-frontend.md  phase-5-methodology-deploy.md  phase-6b-market-vs-location.md  phase-6e-coverage-automation.md  phase-6f-estimation-tier-honesty.md  phase-6g-provenance-ledger.md  phase-6h-reproducibility-harness.md  phase-6i-fairness-and-boundary.md  phase-6j-sourced-energy-upgrade.md  phase-6k-uncertainty-and-sensitivity.md  phase-6l-retro-tech-frontend.md  phase-6plus-roadmap.md
tests/: test_carbon.py  test_embodied.py  test_energy.py  test_estimate.py  test_fairness.py  test_frontier.py  test_grid.py  test_ingestion.py  test_literature_anchors.py  test_manifest.py  test_output.py  (+9 more)
(+128 files in other folders)
