[project]
name = "llm-carbon-index"
version = "0.1.0"
description = "Estimates the CO2 footprint of OpenRouter-visible LLM inference (estimates with uncertainty ranges, not measurements)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
# Phase 0 uses only the standard library (urllib) for the OpenRouter pull, so
# there are no runtime deps yet. Later phases add: ecologits, pyyaml, requests.
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F pycodestyle+pyflakes, I import sort, B bugbear, S flake8-bandit (secrets/security)
select = ["E", "F", "I", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]      # asserts are expected in tests
"scratch/*" = ["S310"]    # urllib use is reviewed (https-only) in the scratch prover
