[project]
name = "llm-carbon-index"
version = "0.1.0"
description = "Estimates the CO2 footprint of OpenRouter-visible LLM inference (estimates with uncertainty ranges, not measurements)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
# Deps pinned up front by the coordinator so parallel lanes never edit this file.
dependencies = [
    "requests>=2.31",   # OpenRouter + Electricity Maps HTTP (Phase 1/2)
    "pyyaml>=6.0",      # data/**/*.yaml loading (Phase 2)
    "jsonschema>=4.0",  # output validation (Phase 3)
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F pycodestyle+pyflakes, I import sort, B bugbear, S flake8-bandit (secrets/security)
select = ["E", "F", "I", "B", "S"]

[tool.ruff.lint.per-file-ignores]
# asserts are expected in tests; E402 because every test file imports the local
# pipeline package after a sys.path.insert shim; E501 because test fixtures carry
# long literal data rows and assertion messages where wrapping hurts readability.
"tests/*" = ["S101", "E402", "E501"]
"scratch/*" = ["S310"]    # urllib use is reviewed (https-only) in the scratch prover
